@@ -14,44 +14,48 @@
 // You should have received a copy of the GNU General Public License
 // along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 
-$handlers = array (
+$handlers = array(
+    'assessable_file_uploaded' => array(
+        'handlerfile'       => '/plagiarism/turnitin/lib.php',
+        'handlerfunction'   => 'event_file_uploaded',
+        'schedule'          => 'cron'
+    ),
+    'assessable_files_done' => array(
+        'handlerfile'       => '/plagiarism/turnitin/lib.php',
+        'handlerfunction'   => 'event_files_done',
+        'schedule'          => 'cron'
+    ),
+    'assessable_content_uploaded' => array(
+        'handlerfile'       => '/plagiarism/turnitin/lib.php',
+        'handlerfunction'   => 'event_content_uploaded',
+        'schedule'          => 'cron'
+    ),
+    'assessable_submitted' => array(
+        'handlerfile'       => '/plagiarism/turnitin/lib.php',
+        'handlerfunction'   => 'event_assessable_submitted',
+        'schedule'          => 'cron'
+    ),
+    'mod_created' => array(
+        'handlerfile'       => '/plagiarism/turnitin/lib.php',
+        'handlerfunction'   => 'event_mod_created',
+        'schedule'          => 'cron'
+    ),
+    'mod_updated' => array(
+        'handlerfile'       => '/plagiarism/turnitin/lib.php',
+        'handlerfunction'   => 'event_mod_updated',
+        'schedule'          => 'cron'
+    ),
+    'mod_deleted' => array(
+        'handlerfile'       => '/plagiarism/turnitin/lib.php',
+        'handlerfunction'   => 'event_mod_deleted',
+        'schedule'          => 'cron'
+    )
+);
 
-/*
- * Event Handlers
- */
-    'assessable_file_uploaded' => array (
-        'handlerfile'      => '/plagiarism/turnitin/lib.php',
-        'handlerfunction'  => 'event_file_uploaded',
-        'schedule'         => 'cron'
-    ),
-    'assessable_files_done' => array (
-        'handlerfile'      => '/plagiarism/turnitin/lib.php',
-        'handlerfunction'  => 'event_files_done',
-        'schedule'         => 'cron'
-    ),
-    'assessable_content_uploaded' => array (
-        'handlerfile'      => '/plagiarism/turnitin/lib.php',
-        'handlerfunction'  => 'event_content_uploaded',
-        'schedule'         => 'cron'
-    ),
-    'assessable_submitted' => array (
-        'handlerfile' => '/plagiarism/turnitin/lib.php',
-        'handlerfunction' => 'event_assessable_submitted',
-        'schedule' => 'cron'
-    ),
-    'mod_created' => array (
-        'handlerfile'      => '/plagiarism/turnitin/lib.php',
-        'handlerfunction'  => 'event_mod_created',
-        'schedule'         => 'cron'
-    ),
-    'mod_updated' => array (
-        'handlerfile'      => '/plagiarism/turnitin/lib.php',
-        'handlerfunction'  => 'event_mod_updated',
-        'schedule'         => 'cron'
-    ),
-    'mod_deleted' => array (
-        'handlerfile'      => '/plagiarism/turnitin/lib.php',
-        'handlerfunction'  => 'event_mod_deleted',
-        'schedule'         => 'cron'
+$observers = array(
+    array(
+        'eventname'   => '\core\event\course_reset_ended',
+        'callback'    => 'plagiarism_plugin_turnitin::course_reset',
+        'includefile' => '/plagiarism/turnitin/lib.php'
     )
 );
